@@ -1,3 +1,7 @@
+2004-10-09  Matthias Wimmer  <m@tthias.net>
+
+    * clients.c: Fixing problem reported by Pablo Herrero
+
 2004-09-07  Matthias Wimmer  <m@tthias.net>
 
     * xmlparse/*: removed expat sources from jadc2s and link against libexpat
